<resources>
    <string name="app_name">TipCalculator</string>
    <string name="total_amount">Total amount</string>
    <string name="tip_percentage">Total tip percentage</string>
    <string name="percentage_15">15%</string>
    <string name="percentage_20">20%</string>
    <string name="percentage_35">35%</string>
    <string name="amount">Amount</string>
    <string name="round_button">Round amount</string>
    <string name="tip_amount_title">Tip amount: $</string>
    <string name="total_amount_title">Total amount with tip: $</string>
</resources>